--- a/src/app/modules/banner/banner-list/banner-list.component.html
+++ b/src/app/modules/banner/banner-list/banner-list.component.html
@@ -93,7 +93,7 @@
               [closable]="true"
               [closeOnEscape]="true"
               >
-        
+        @if(bannerDialog) {
         <form [formGroup]="bannerForm" class="space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </form>
-
+        }
         <ng-template pTemplate="footer">
             <div class="flex justify-end gap-2">
                 <p-button label="Cancel" 
