Remove PaymentMethodLabelPipe and update related components; refactor inventory dashboard to utilize charting library for profit visualization and enhance data loading logic.

--- a/src/app/modules/inventory/components/revenue-management/revenue-management.component.html
+++ b/src/app/modules/inventory/components/revenue-management/revenue-management.component.html
@@ -170,7 +170,7 @@
             
             <td class="p-3 border-b">
               <p-tag 
-                [value]="revenue.paymentMethod | paymentMethodLabel"
+                [value]="revenue.paymentMethod"
                 [severity]="revenue.paymentMethod | severityColor:'payment'"
                 class="text-xs">
               </p-tag>
