--- a/src/app/modules/inventory/components/inventory-dashboard/inventory-dashboard.component.html
+++ b/src/app/modules/inventory/components/inventory-dashboard/inventory-dashboard.component.html
@@ -113,7 +113,8 @@
         </div>
         <div class="chart-content">
           <div class="profit-bars">
-            <div *ngFor="let item of profitChartData" class="profit-bar">
+            <p-chart [type]="'line'" [data]="data" [options]="options"></p-chart>  
+            <!-- <div *ngFor="let item of profitChartData" class="profit-bar">
               <div class="bar-label">{{ item.name }}</div>
               <div class="bar-container">
                 <div class="bar" 
@@ -122,7 +123,7 @@
                   <span class="bar-value">{{ item.value | currency:'EGP':'symbol':'1.0-0' }}</span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
